Fixed semi category controllers
